base/comptia-lernplattform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comptia-lernplattform
  namespace: apps
spec:
  selector:
    app: comptia-lernplattform
  ports:
    - port: 80
      targetPort: 3000
