base/comptia-lernplattform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comptia-lernplattform
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: comptia.ajti.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comptia-lernplattform
                port:
                  number: 80
